Fix header on mobile

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
 }
 
-#navbar {
+#header {
     width: 100%;
     height: 120px;
     background-color: rgb(231, 231, 231);
@@ -28,19 +28,16 @@ body {
     border: 1px solid grey;
 }
 
-#title-main {
+.nav-item {
+    text-decoration: none;
+    color: rgb(60, 60, 60);
+    margin: 0px 40px;
     font-family: "Roboto", sans-serif;
     font-optical-sizing: auto;
     font-weight: 200;
     font-style: normal;
     font-variation-settings:
         "wdth" 100;
-}
-
-.nav-item {
-    text-decoration: none;
-    color: rgb(60, 60, 60);
-    margin: 0px 40px;
 }
 
 .section {
@@ -79,6 +76,13 @@ body {
 }
 
 @media screen and (max-width: 800px) {
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        height: 100px;
+        justify-content: space-between;
+    }
+
     .nav-item {
         text-decoration: none;
         color: rgb(60, 60, 60);
